--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ passlib = {extras = ["argon2"], version = "^1.7.4"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 asyncpg = "^0.30.0"
 alembic = "^1.14.0"
-faststream = {extras = ["kafka"], version = "^0.5.33"}
 python-jose = "^3.3.0"
+aiokafka = "^0.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
